# MyGoogleTestExample

./: CMakeLists.txt  Example.cpp  Example.hpp  main.cpp
test/: CMakeLists.txt  ExampleTests.cpp
